--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -34,16 +34,16 @@ html(lang="vi")
       block body
     block script
       // jequery plugins
-      script(src="assets/js/jquery.js")
-      script(src="assets/js/popper.min.js")
-      script(src="assets/js/bootstrap.min.js")
-      script(src="assets/js/owl.js")
-      script(src="assets/js/wow.js")
-      script(src="assets/js/validation.js")
-      script(src="assets/js/jquery.fancybox.js")
-      script(src="assets/js/appear.js")
-      script(src="assets/js/scrollbar.js")
-      script(src="assets/js/jquery.nice-select.min.js")
-      script(src="assets/js/jquery-ui.js")
+      script(src="assets/themes/hoiandor/assets/js/jquery.js")
+      script(src="assets/themes/hoiandor/assets/js/popper.min.js")
+      script(src="assets/themes/hoiandor/assets/js/bootstrap.min.js")
+      script(src="assets/themes/hoiandor/assets/js/owl.js")
+      script(src="assets/themes/hoiandor/assets/js/wow.js")
+      script(src="assets/themes/hoiandor/assets/js/validation.js")
+      script(src="assets/themes/hoiandor/assets/js/jquery.fancybox.js")
+      script(src="assets/themes/hoiandor/assets/js/appear.js")
+      script(src="assets/themes/hoiandor/assets/js/scrollbar.js")
+      script(src="assets/themes/hoiandor/assets/js/jquery.nice-select.min.js")
+      script(src="assets/themes/hoiandor/assets/js/jquery-ui.js")
       // main-js
-      script(src="assets/js/script.js")
+      script(src="assets/themes/hoiandor/assets/js/script.js")
