--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -33,7 +33,7 @@ html(lang="vi")
     .boxed_wrapper
       block body
     block script
-      // jequery plugins
+      // jquery plugins
       script(src="assets/themes/hoiandor/assets/js/jquery.js")
       script(src="assets/themes/hoiandor/assets/js/popper.min.js")
       script(src="assets/themes/hoiandor/assets/js/bootstrap.min.js")
