--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -6,6 +6,7 @@ html(lang="vi")
       meta(http-equiv="X-UA-Compatible", content="IE=edge")
       meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0")
     block head
+      title= title
     block link
       link(rel="icon", href="assets/themes/hoiandor/assets/images/favicon.ico", type="image/x-icon")
       // Google Fonts
