--- a/blocks/hoiandor/preloader.pug
+++ b/blocks/hoiandor/preloader.pug
@@ -4,7 +4,10 @@
       .animation-preloader
         .spinner
         .txt-loading
-          - let chars = (preloader || '').split('');
-          - let enChars = chars.map((v) => (v === ' ' ? '&nbsp;' : v));
-          - for(let i = 0; i < chars.length; i++)
-            span.letters-loading(data-text-preloader=`${chars[i]}`)!= enChars[i]
+          - if (preloader)
+            - let chars = (preloader.text || '').split('');
+            - let enChars = chars.map((v) => (v === ' ' ? '&nbsp;' : v));
+            - for(let i = 0; i < chars.length; i++)
+              span.letters-loading(data-text-preloader=`${chars[i]}`)!= enChars[i]
+          - else
+            span No 'preloader' data
