chore: happy work

--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -2,3 +2,5 @@ extends ../../layouts/hoiandor/home
 
 block body
   include ../../blocks/hoiandor/preloader
+  include ../../blocks/hoiandor/header
+  include ../../blocks/hoiandor/banner
