--- a/blocks/hoiandor/header.pug
+++ b/blocks/hoiandor/header.pug
@@ -16,143 +16,14 @@ header.main-header.style-one
           nav.main-menu.navbar-expand-md.navbar-light
             #navbarSupportedContent.collapse.navbar-collapse.show.clearfix
               ul.navigation.clearfix
-                li.current.dropdown
-                  a(href="index.html") Home
-                  ul
-                    li
-                      a(href="index.html") Home Page 01
-                    li
-                      a(href="index-2.html") Home Page 02
-                    li
-                      a(href="index-3.html") Home Page 03
-                    li
-                      a(href="index-4.html") Home Page 04
-                    li
-                      a(href="index-5.html") Home Page 05
-                    li
-                      a(href="index-onepage.html") OnePage Home
-                    li
-                      a(href="index-rtl.html") RTL Home
-                    li.dropdown
-                      a(href="index.html") Header Style
+                - for (let item of (header.menu||[]))
+                  li(class=`${item.active ? 'current' : ''} ${item.children ? 'dropdown' : ''}`.trim())
+                    a(href=item.href) #{ item.label }
+                    - if (item.children)
                       ul
-                        li
-                          a(href="index.html") Header Style 01
-                        li
-                          a(href="index-2.html") Header Style 02
-                        li
-                          a(href="index-3.html") Header Style 03
-                li.dropdown
-                  a(href="index.html") Destinations
-                  ul
-                    li
-                      a(href="destination.html") Destinations 01
-                    li
-                      a(href="destination-2.html") Destinations 02
-                    li
-                      a(href="destination-details.html") Destination Details
-                li.dropdown
-                  a(href="index.html") Tours
-                  ul
-                    li
-                      a(href="tour-1.html") Tours Grid
-                    li
-                      a(href="tour-2.html") Tours List
-                    li
-                      a(href="tour-details.html") Tour Details
-                li.dropdown
-                  a(href="index.html") Pages
-                  ul
-                    li
-                      a(href="about.html") About Us
-                    li
-                      a(href="booking-1.html") Booking Process
-                    li
-                      a(href="tour-deals.html") Tour Deals
-                    li
-                      a(href="tour-guide.html") Tour Guide
-                    li
-                      a(href="gallery-1.html") Gallery 01
-                    li
-                      a(href="gallery-2.html") Gallery 02
-                    li
-                      a(href="faq.html") Faq's
-                    li
-                      a(href="signup.html") Sign Up
-                    li
-                      a(href="login.html") Sign In
-                    li
-                      a(href="error.html") 404
-                li.dropdown
-                  a(href="index.html") Elements
-                  .megamenu
-                    .row.clearfix
-                      .col-xl-6.column
-                        ul
+                        - for(let childItem of item.children)
                           li
-                            h4 Elements 1
-                          li
-                            a(href="about-element-1.html") About Block 01
-                          li
-                            a(href="about-element-2.html") About Block 02
-                          li
-                            a(href="about-element-3.html") About Block 03
-                          li
-                            a(href="feature-element-1.html") Feature Block 01
-                          li
-                            a(href="feature-element-2.html") Feature Block 02
-                          li
-                            a(href="tour-element-1.html") Tour Block 01
-                          li
-                            a(href="tour-element-2.html") Tour Block 02
-                          li
-                            a(href="place-element-1.html") Place Block 01
-                      .col-xl-6.column
-                        ul
-                          li
-                            h4 Elements 2
-                          li
-                            a(href="place-element-2.html") Place Block 02
-                          li
-                            a(href="news-element-1.html") News Block 01
-                          li
-                            a(href="news-element-2.html") News Block 02
-                          li
-                            a(href="team-element-1.html") Team Block 01
-                          li
-                            a(href="team-element-2.html") Team Block 02
-                          li
-                            a(href="video-element.html") Video Block
-                          li
-                            a(href="funfact-element.html") Funfact Block
-                          li
-                            a(href="testimonial-element.html") Testimonial Block
-                li.dropdown
-                  a(href="index.html") Blog
-                  ul
-                    li
-                      a(href="blog.html") Blog Grid
-                    li
-                      a(href="blog-2.html") Blog Standard
-                    li
-                      a(href="blog-details.html") Blog Details
-                li
-                  a(href="contact.html") Contact
-        ul.menu-right-content.clearfix
-          li.search-box-outer
-            .dropdown
-              button#dropdownMenu3.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
-                i.far.fa-search
-              .dropdown-menu.search-panel(aria-labelledby="dropdownMenu3")
-                .form-container
-                  form(method="post", action="blog.html")
-                    .form-group
-                      input(type="search", name="search-field", placeholder="Search....", required)
-                      button.search-btn(type="submit")
-                        span.fas.fa-search
-          li.user-link
-            a(href="signup.html")
-              i.icon-Profile
+                            a(href=childItem.href) #{ childItem.label }
   // sticky Header
   .sticky-header
     .auto-container
@@ -164,21 +35,6 @@ header.main-header.style-one
         .menu-area
           nav.main-menu.clearfix
             // Keep This Empty / Menu will come through Javascript
-        ul.menu-right-content.clearfix
-          li.search-box-outer
-            .dropdown
-              button#dropdownMenu4.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
-                i.far.fa-search
-              .dropdown-menu.search-panel(aria-labelledby="dropdownMenu4")
-                .form-container
-                  form(method="post", action="blog.html")
-                    .form-group
-                      input(type="search", name="search-field", placeholder="Search....", required)
-                      button.search-btn(type="submit")
-                        span.fas.fa-search
-          li.user-link
-            a(href="signup.html")
-              i.icon-Profile
   //  Mobile Menu  
   .mobile-menu
     .menu-backdrop
@@ -186,33 +42,32 @@ header.main-header.style-one
       i.fas.fa-times
     nav.menu-box
       .nav-logo
-        a(href="index.html")
-          img(src="assets/images/logo-2.png", alt)
+        a(href=header.logo.href)
+          img(src=header.logo.src, alt=header.logo.alt)
       .menu-outer
         // Here Menu Will Come Automatically Via Javascript / Same Menu as in Header
       .contact-info
-        h4 Contact Info
+        h4 Thông tin liên hệ
         ul
-          li Chicago 12, Melborne City, USA
+          li #{ header.contact.address }
           li
-            a(href="tel:+8801682648101") +88 01682648101
+            a(href=`tel:${header.contact.mobile}`) #{ header.contact.mobile }
           li
-            a(href="mailto:info@example.com") info@example.com
+            a(href=`mailto:${header.contact.email}`) #{ header.contact.email }
       .social-links
         ul.clearfix
+          //li
+          //  a(href="index.html")
+          //    span.fab.fa-twitter
           li
-            a(href="index.html")
-              span.fab.fa-twitter
-          li
-            a(href="index.html")
+            a(href=header.contact.facebook)
               span.fab.fa-facebook-square
-          li
-            a(href="index.html")
-              span.fab.fa-pinterest-p
-          li
-            a(href="index.html")
-              span.fab.fa-instagram
-          li
-            a(href="index.html")
-              span.fab.fa-youtube
-  //  End Mobile Menu 
+          //li
+          //  a(href="index.html")
+          //    span.fab.fa-pinterest-p
+          //li
+          //  a(href="index.html")
+          //    span.fab.fa-instagram
+          //li
+          //  a(href="index.html")
+          //    span.fab.fa-youtube
