--- a/blocks/hoiandor/banner.pug
+++ b/blocks/hoiandor/banner.pug
@@ -3,4 +3,4 @@ section.banner-section(style=`background-image: url(${banner.background})`)
   .auto-container
     .content-box
       h2!= banner.title
-      p= banner.description
+      p.la-banner-desc!= banner.description
