chore: happy work

--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -8,7 +8,7 @@ html(lang="vi")
     block head
       title= title
     block link
-      link(rel="icon", href="assets/themes/hoiandor/assets/images/favicon.ico", type="image/x-icon")
+      link(rel="icon", href="assets/themes/assets/images/favicon.ico", type="image/x-icon")
       // Google Fonts
       link(
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
@@ -19,32 +19,33 @@ html(lang="vi")
         rel="stylesheet"
       )
       // Stylesheets
-      link(href="assets/themes/hoiandor/assets/css/font-awesome-all.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/flaticon.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/owl.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/bootstrap.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/jquery.fancybox.min.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/animate.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/nice-select.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/jquery-ui.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/color.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/style.css", rel="stylesheet")
-      link(href="assets/themes/hoiandor/assets/css/responsive.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/font-awesome-all.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/flaticon.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/owl.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/bootstrap.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/jquery.fancybox.min.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/animate.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/nice-select.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/jquery-ui.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/color.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/style.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/responsive.css", rel="stylesheet")
+      link(href="assets/css/style.css", rel="stylesheet")
   body
     .boxed_wrapper
       block body
     block script
       // jquery plugins
-      script(src="assets/themes/hoiandor/assets/js/jquery.js")
-      script(src="assets/themes/hoiandor/assets/js/popper.min.js")
-      script(src="assets/themes/hoiandor/assets/js/bootstrap.min.js")
-      script(src="assets/themes/hoiandor/assets/js/owl.js")
-      script(src="assets/themes/hoiandor/assets/js/wow.js")
-      script(src="assets/themes/hoiandor/assets/js/validation.js")
-      script(src="assets/themes/hoiandor/assets/js/jquery.fancybox.js")
-      script(src="assets/themes/hoiandor/assets/js/appear.js")
-      script(src="assets/themes/hoiandor/assets/js/scrollbar.js")
-      script(src="assets/themes/hoiandor/assets/js/jquery.nice-select.min.js")
-      script(src="assets/themes/hoiandor/assets/js/jquery-ui.js")
+      script(src="assets/themes/assets/js/jquery.js")
+      script(src="assets/themes/assets/js/popper.min.js")
+      script(src="assets/themes/assets/js/bootstrap.min.js")
+      script(src="assets/themes/assets/js/owl.js")
+      script(src="assets/themes/assets/js/wow.js")
+      script(src="assets/themes/assets/js/validation.js")
+      script(src="assets/themes/assets/js/jquery.fancybox.js")
+      script(src="assets/themes/assets/js/appear.js")
+      script(src="assets/themes/assets/js/scrollbar.js")
+      script(src="assets/themes/assets/js/jquery.nice-select.min.js")
+      script(src="assets/themes/assets/js/jquery-ui.js")
       // main-js
-      script(src="assets/themes/hoiandor/assets/js/script.js")
+      script(src="assets/themes/assets/js/script.js")
