--- a/assets/css/hoiandor/style.css
+++ b/assets/css/hoiandor/style.css
@@ -33,6 +33,13 @@
 }
 
 .la-banner-desc {
-  color: var(--primary-color);
-  max-width: 600px;
+  max-width: 700px;
+  text-align: justify;
+}
+
+.la-banner-desc strong {
+  color: var(--primary-color) !important;
+  background: rgba(255, 255, 255, 0.5);
+  padding: 0 0.25em;
+  border-radius: 0.25em;
 }
