--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -4,3 +4,4 @@ block body
   include ../../blocks/hoiandor/preloader
   include ../../blocks/hoiandor/header
   include ../../blocks/hoiandor/banner
+  include ../../blocks/hoiandor/about01
