--- a/assets/hoiandor/css/style.css
+++ b/assets/hoiandor/css/style.css
@@ -71,11 +71,11 @@
   margin-bottom: 1em;
 }
 
-.image_block_1 .image-box .video-content {
-  padding: 0.5em;
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 0.5em;
-}
+/*.image_block_1 .image-box .video-content {*/
+/*  padding: 0.5em;*/
+/*  background: rgba(255, 255, 255, 0.5);*/
+/*  border-radius: 0.5em;*/
+/*}*/
 
 .allow-viewer {
 }
