--- a/blocks/hoiandor/about01.pug
+++ b/blocks/hoiandor/about01.pug
@@ -7,23 +7,24 @@ section.about-section(style="background: #f5f6f6")
           .image-box
             .shape
               .shape-1(style="background-image: url(assets/themes/assets/images/shape/shape-2.png)")
-              .shape-2(style="background-image: url(assets/themes/assets/images/shape/shape-3.png)")
+              .shape-2(style=`background-image: url(${about01.info.decoShape}); width: 150px; height: 150px`)
             figure.image.image-1
-              img.allow-viewer(src="assets/images/13d-1024x768.jpg", alt="Ảnh dự án Hội An Dor, Hội An D'Or 1")
-              .shape-3(style="background-image: url(assets/themes/assets/images/shape/shape-3.png)")
+              img.allow-viewer(src=about01.info.image1.src, alt=about01.info.image1.alt, style="border-radius: 0.5em")
+              .shape-3(style=`background-image: url(${about01.info.decoShape}); width: 150px; height: 150px`)
             figure.image.image-2
-              img.allow-viewer(src="assets/images/4d.jpg", alt="Ảnh dự án Hội An Dor, Hội An D'Or 2")
-            //.video-content
-            //  .video-btn
-            //    a.lightbox-image(href="https://www.youtube.com/watch?v=wIDjvxSLyIg", data-caption="video du an hoian d'or, Hoi An D'Or")
-            //      i.icon-Video
+              img(src=about01.info.image2.src, alt=about01.info.image2.alt, style="border-radius: 0.5em")
+            .video-content
+              h3.text-pretty.text-italic.color-primary!= about01.info.video.caption
+              .video-btn
+                a.lightbox-image(href=about01.info.video.href, data-caption=about01.info.video.caption)
+                  i.icon-Video
       .col-lg-6.col-md-12.col-sm-12.content-column
         .content_block_1
           .content-box
             .sec-title
-              //p.color-primary Hội An D'Or
-              h2.color-primary!= about01.info.title
-              h3.text-pretty.color-primary.text-italic(style="margin-top: 0.5em")!= about01.info.description
+              p.color-primary!= about01.info.title
+              h2.color-primary!= about01.info.description
+              //h3.text-pretty.color-primary.text-italic(style="margin-top: 0.5em")!= about01.info.description
             - for (let detail of about01.info.details)
               .text
                 p.color-text-primary
