--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -5,3 +5,4 @@ block body
   include ../../blocks/hoiandor/header
   include ../../blocks/hoiandor/banner
   include ../../blocks/hoiandor/about01
+  include ../../blocks/hoiandor/about02
