--- a/blocks/hoiandor/about02.pug
+++ b/blocks/hoiandor/about02.pug
@@ -1,4 +1,4 @@
-section.map-section.bg-color-1(style="padding-bottom: 0; background: #ffffff")
+section.map-section.bg-color-1(style="padding-bottom: 120px; background: #ffffff")
   .auto-container
     .row
       .col-lg-6.col-md-12.col-sm-12
