--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -6,3 +6,4 @@ block body
   include ../../blocks/hoiandor/banner
   include ../../blocks/hoiandor/about01
   include ../../blocks/hoiandor/about02
+  include ../../blocks/hoiandor/about03
