--- a/blocks/hoiandor/about03.pug
+++ b/blocks/hoiandor/about03.pug
@@ -10,6 +10,7 @@ section.deals-style-two.sec-pad(style=`background-image: url(${about03.backgroun
             figure.image-box
               img.allow-viewer(src=item.image.src, alt=item.image.alt)
             .content-box
+              .shape-2.la-shape(style=`background-image: url(${about03.decoShape});top: 0;right: 0;left: auto`)
               span.la-fix-about03-title!= item.title
               h3.la-fix-about03-title
                 a(href=item.href)!= item.subTitle
