--- a/assets/hoiandor/css/style.css
+++ b/assets/hoiandor/css/style.css
@@ -158,3 +158,14 @@ strong {
   background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 1) 100%);
   height: 60px;
 }
+
+.la-cloud .pattern-layer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 95px;
+  background-repeat: repeat-x;
+  animation: slide 100s linear infinite;
+  -webkit-animation: slide 100s linear infinite;
+}
