--- a/blocks/hoiandor/about03.pug
+++ b/blocks/hoiandor/about03.pug
@@ -1,4 +1,5 @@
-section.deals-style-two.sec-pad(style=`background-image: url(${about03.background})`)
+section.deals-style-two.sec-pad.la-cloud(style=`background-image: url(${about03.background})`)
+  //.pattern-layer(style="background-image: url(assets/themes/assets/images/shape/shape-1.png)")
   .auto-container
     .sec-title.centred.light
       p!= about03.title
