--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -7,3 +7,4 @@ block body
   include ../../blocks/hoiandor/about01
   include ../../blocks/hoiandor/about02
   include ../../blocks/hoiandor/about03
+  include ../../blocks/hoiandor/about04
