chore: happy work

--- a/assets/hoiandor/css/style.css
+++ b/assets/hoiandor/css/style.css
@@ -173,3 +173,7 @@ strong {
 .la-relative {
   position: relative;
 }
+
+.place-block-one .inner-box .image-box:before {
+  pointer-events: none;
+}
