--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -8,3 +8,4 @@ block body
   include ../../blocks/hoiandor/about02
   include ../../blocks/hoiandor/about03
   include ../../blocks/hoiandor/about04
+  include ../../blocks/hoiandor/posts01
