chore: happy work

--- a/blocks/hoiandor/posts01.pug
+++ b/blocks/hoiandor/posts01.pug
@@ -15,6 +15,6 @@ section.news-section.home-4.sec-pad
               .lower-content
                 h3.la-same-height-02(data-offset=35)
                   a(href=item.href)!= item.title
-                p.la-same-height-03(data-offset=0)!= item.description
+                p.la-same-height-03.la-text-primary(data-offset=0)!= item.description
                 .btn-box
                   a.theme-btn-two(href=item.href) Xem chi tiết
