--- a/assets/hoiandor/css/style.css
+++ b/assets/hoiandor/css/style.css
@@ -192,3 +192,12 @@ strong {
 /*  bottom: 0;*/
 /*  left: 0;*/
 /*}*/
+
+.la-contact-container {
+  padding: 1em 0;
+  border-radius: 2em;
+}
+
+.la-rounded {
+  border-radius: 2em !important;
+}
