--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -9,3 +9,4 @@ block body
   include ../../blocks/hoiandor/about03
   include ../../blocks/hoiandor/about04
   include ../../blocks/hoiandor/posts01
+  include ../../blocks/hoiandor/contact01
