chore: happy work

--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -10,3 +10,4 @@ block body
   include ../../blocks/hoiandor/about04
   include ../../blocks/hoiandor/posts01
   include ../../blocks/hoiandor/contact01
+  include ../../blocks/hoiandor/foot
