--- a/blocks/hoiandor/contact01.pug
+++ b/blocks/hoiandor/contact01.pug
@@ -1,4 +1,5 @@
-section.contact-section
+section.contact-section.la-cloud
+  .pattern-layer(style="background-image: url(assets/themes/assets/images/shape/shape-10.png)")
   .auto-container
     .row.clearfix.border-primary-2.la-contact-container.p-sm-5.p-md-5
       .col-lg-5.col-md-12.col-sm-12.content-column
