chore: happy work

--- a/blocks/hoiandor/about03.pug
+++ b/blocks/hoiandor/about03.pug
@@ -1,5 +1,5 @@
 section.deals-style-two.sec-pad.la-cloud(style=`background-image: url(${about03.background})`)
-  .pattern-layer(style="background-image: url(assets/themes/assets/images/shape/shape-1.png)")
+  .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-20.png)")
   .auto-container
     .sec-title.centred.light
       p!= about03.title
