--- a/blocks/hoiandor/posts01.pug
+++ b/blocks/hoiandor/posts01.pug
@@ -1,4 +1,4 @@
-section.news-section.home-4.sec-pad
+section.news-section.home-4.sec-pad(style="background: #f5f6f6")
   .auto-container
     .sec-title
       p.color-primary!= posts01.title
