--- a/assets/hoiandor/css/style.css
+++ b/assets/hoiandor/css/style.css
@@ -3,6 +3,7 @@
   --secondary-color: #002d2e;
   --secondary-font: "Playfair Display", serif;
   --color-text-primary: #333333;
+  --color-fancy: #ecd9b0;
 }
 
 .la-contact-form .form-group input {
@@ -232,4 +233,34 @@ strong {
   font-style: italic;
   font-size: 0.75em;
   text-transform: unset !important;
+}
+
+.la-fancy-divider {
+  position: absolute;
+  top: -50px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  max-width: 1200px;
+}
+
+.la-fancy-divider .la-fancy-line {
+  position: relative;
+  top: -51px;
+  z-index: 1;
+}
+
+.la-fancy-divider img {
+  position: relative;
+  z-index: 2;
+  height: 100px;
+}
+
+.la-border-fancy-2 {
+  border: 2px solid var(--color-fancy);
+}
+
+.la-no-animation {
+  -webkit-animation: unset !important;
+  animation: unset !important;
 }
