--- a/blocks/hoiandor/about04.pug
+++ b/blocks/hoiandor/about04.pug
@@ -1,4 +1,4 @@
-section.place-section.sec-pad.bg-color-1
+section.place-section.sec-pad.bg-color-1(style="background: #ffffff")
   .auto-container
     .row.clearfix
       .col-lg-4.col-md-6.col-sm-12.title-column
