--- a/blocks/hoiandor/contact01.pug
+++ b/blocks/hoiandor/contact01.pug
@@ -1,7 +1,11 @@
 section.contact-section.la-cloud
-  .pattern-layer(style="background-image: url(assets/themes/assets/images/shape/shape-10.png)")
-  .auto-container
-    .row.clearfix.border-primary-2.la-contact-container.p-sm-5.p-md-5.m-1
+  .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-10.png)")
+  .auto-container(style="margin-bottom: 2em")
+    div(style="position: relative")
+      .la-fancy-divider
+        img(src="assets/images/shape2.png", alt="divider")
+        .la-fancy-line
+    .row.clearfix.la-contact-container.p-sm-5.p-md-5.m-1.la-border-fancy-2
       .col-lg-5.col-md-12.col-sm-12.content-column
         .content_block_5
           .content-box
