chore: happy work

--- a/blocks/hoiandor/about01.pug
+++ b/blocks/hoiandor/about01.pug
@@ -1,5 +1,5 @@
-section.about-section(style="background: #f5f6f6")
-  .pattern-layer(style="background-image: url(assets/themes/assets/images/shape/shape-2.png)")
+section.about-section.la-cloud(style="background: #f5f6f6")
+  .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-9.png)")
   .auto-container
     .row.clearfix
       .col-lg-6.col-md-12.col-sm-12.image-column
