--- a/blocks/hoiandor/about02.pug
+++ b/blocks/hoiandor/about02.pug
@@ -1,4 +1,5 @@
-section.map-section.bg-color-1(style="padding-bottom: 120px; background: #ffffff")
+section.map-section.bg-color-1.la-cloud(style="padding-bottom: 120px; background: #ffffff")
+  .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-1.png)")
   .auto-container
     .row
       .col-lg-6.col-md-12.col-sm-12
@@ -15,7 +16,10 @@ section.map-section.bg-color-1(style="padding-bottom: 120px; background: #ffffff
         img.border-primary-2.allow-viewer(src=about2.image1.src, alt=about2.image1.alt, style="width: 100%; border-radius: 1em")
         //.la-bottom-image
         //  img.allow-viewer(src=about2.image2.src, alt=about2.image1.alt, style="width: 100%")
-section.map-section.bg-color-1(style="padding-bottom: 120px")
+section.map-section.bg-color-1.la-cloud(style="padding-bottom: 120px")
+  .pattern-layer.la-no-animation(
+    style="background-image: url(assets/themes/assets/images/shape/shape-24.png); bottom: -90px; z-index: 1; height: 100px"
+  )
   .auto-container
     .row
       .col-lg-6.col-md-12.col-sm-12(style="margin-bottom: 2em")
