--- a/blocks/hoiandor/posts01.pug
+++ b/blocks/hoiandor/posts01.pug
@@ -1,4 +1,5 @@
-section.news-section.home-4.sec-pad(style="background: #f5f6f6")
+section.news-section.home-4.sec-pad.la-cloud(style="background: #f5f6f6")
+  .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-9.png)")
   .auto-container
     .sec-title
       p.color-primary!= posts01.title
