--- a/blocks/hoiandor/foot.pug
+++ b/blocks/hoiandor/foot.pug
@@ -5,13 +5,13 @@ footer.main-footer.bg-color-2
       .row.clearfix
         .col-lg-3.col-md-6.col-sm-12.footer-column
           .footer-widget.logo-widget
-            figure.footer-logo
-              a(href="/")
-                img(src=header.logo.src, alt=header.logo.alt)
+            figure.footer-logo.centred
+              img(src=header.logo.src, alt=header.logo.alt)
             ul.social-links.clearfix
               li.centred(style="width: 100%")
-                a(href=header.contact.facebook)
+                a.la-social-button(href=header.contact.facebook)
                   i.fab.fa-facebook-f
+                  span Xem trên Facebook
         .col-lg-3.col-md-6.col-sm-12.footer-column
           .footer-widget.links-widget
             .widget-title
