--- a/blocks/hoiandor/header.pug
+++ b/blocks/hoiandor/header.pug
@@ -3,7 +3,7 @@ header.main-header.style-one
   .header-lower
     .auto-container
       .outer-box
-        .logo-box
+        .logo-box.la-logo-box
           figure.logo
             a(href=header.logo.href)
               img(src=header.logo.src, alt=header.logo.alt)
