chore: happy work

--- a/blocks/hoiandor/about02.pug
+++ b/blocks/hoiandor/about02.pug
@@ -29,7 +29,12 @@ section.map-section.bg-color-1.la-cloud(style="padding-bottom: 120px")
         .sec-title.la-z-index(style="text-align: right")
           p.color-primary!= about2.ground.description
           h2.color-primary!= about2.ground.title
-          img(src=about2.ground.info.deco.src, alt=about2.ground.info.deco.alt)
+          img.d-none.d-lg-block(
+            src=about2.ground.info.deco.src,
+            alt=about2.ground.info.deco.alt,
+            width=about2.ground.info.deco.width,
+            height=about2.ground.info.deco.height
+          )
       .map-inner
         - for (const image of about2.ground.images)
           .map-content.clearfix(style="min-height: 0")
