--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -32,6 +32,10 @@ html(lang="vi")
       link(href="assets/themes/assets/css/responsive.css", rel="stylesheet")
       link(href="assets/css/viewer.min.css", rel="stylesheet")
       link(href="assets/css/style.css", rel="stylesheet")
+      link(href="assets/css/sm.css", rel="stylesheet")
+      link(href="assets/css/md.css", rel="stylesheet")
+      link(href="assets/css/lg.css", rel="stylesheet")
+      link(href="assets/css/xl.css", rel="stylesheet")
   body#images-viewer
     .boxed_wrapper
       block body
