chore: happy work

--- a/blocks/hoiandor/foot.pug
+++ b/blocks/hoiandor/foot.pug
@@ -65,13 +65,14 @@ footer.main-footer.bg-color-2
       .bottom-inner.clearfix
         .copyright.pull-left
           p
-            a(href="/") Hoian d'Or
-            | © 2021 All Right Reserved
+            a(href="/") Hoian d'Or © 2021 All Right Reserved
         ul.footer-nav.pull-right
           li
-            a(href="/") Terms of Service
+            a(href="https://opensource.org/ToS", target="_blank") Terms of Service
           li
-            a(href="/") Privacy Policy
+            a(href="https://opensource.org/licenses/MIT", target="_blank") Privacy Policy
+          li
+            a(href="https://github.com/bluevariant", target="_blank") Website Design Services
 //  main-footer end 
 // Scroll to top
 button.scroll-top.scroll-to-target(data-target="html")
