chore: happy work

--- a/blocks/hoiandor/about01.pug
+++ b/blocks/hoiandor/about01.pug
@@ -1,4 +1,4 @@
-section.about-section.la-cloud(style="background: #f5f6f6")
+section#tong-quan.about-section.la-cloud(style="background: #f5f6f6")
   .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-9.png)")
   .auto-container
     .row.clearfix
