--- a/blocks/hoiandor/about04.pug
+++ b/blocks/hoiandor/about04.pug
@@ -1,4 +1,4 @@
-section.place-section.sec-pad.bg-color-1.la-cloud(style="background: #ffffff")
+section#co-cau.place-section.sec-pad.bg-color-1.la-cloud(style="background: #ffffff")
   .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-1.png)")
   .auto-container
     .row.clearfix
