--- a/blocks/hoiandor/contact01.pug
+++ b/blocks/hoiandor/contact01.pug
@@ -1,4 +1,4 @@
-section.contact-section.la-cloud
+section#lien-he.contact-section.la-cloud
   .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-10.png)")
   .auto-container(style="margin-bottom: 2em")
     div(style="position: relative")
