--- a/blocks/hoiandor/about03.pug
+++ b/blocks/hoiandor/about03.pug
@@ -1,4 +1,4 @@
-section.deals-style-two.sec-pad.la-cloud(style=`background-image: url(${about03.background})`)
+section#tien-ich.deals-style-two.sec-pad.la-cloud(style=`background-image: url(${about03.background})`)
   .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-20.png)")
   .auto-container
     .sec-title.centred.light
