chore: happy work

--- a/blocks/hoiandor/foot.pug
+++ b/blocks/hoiandor/foot.pug
@@ -26,25 +26,25 @@ footer.main-footer.bg-color-2
             .widget-title
               h3 Thư viện ảnh
             .widget-content
-              ul.image-list.clearfix
-                li
-                  figure.image-box
-                    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
-                li
-                  figure.image-box
-                    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
-                li
-                  figure.image-box
-                    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
-                li
-                  figure.image-box
-                    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
-                li
-                  figure.image-box
-                    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
-                li
-                  figure.image-box
-                    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
+              ul#auto-gallery.image-list.clearfix
+                //li
+                //  figure.image-box
+                //    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
+                //li
+                //  figure.image-box
+                //    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
+                //li
+                //  figure.image-box
+                //    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
+                //li
+                //  figure.image-box
+                //    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
+                //li
+                //  figure.image-box
+                //    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
+                //li
+                //  figure.image-box
+                //    img.allow-viewer(src="assets/images/86af54abce8b38d5619a-cropped.png", alt)
         .col-lg-3.col-md-6.col-sm-12.footer-column
           .footer-widget.contact-widget
             .widget-title
