--- a/assets/hoiandor/css/style.css
+++ b/assets/hoiandor/css/style.css
@@ -341,6 +341,12 @@ strong {
   border-left-width: 2px;
 }
 
+.la-ignore-gallery {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media only screen and (max-width: 399px) {
   .la-logo-box {
     background: unset !important;
